--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bcrypt-nodejs": "0.0.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "mongodb": "^3.1.12",
     "mongoose": "^5.4.5",
     "nodemailer": "^5.1.1",
     "phantom": "^6.0.3"
