--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.16.4",
     "mongodb": "^3.1.12",
     "mongoose": "^5.4.5",
+    "mysql": "^2.16.0",
     "nodemailer": "^5.1.1",
     "phantom": "^6.0.3"
   }
