--- a/client/package.json
+++ b/client/package.json
@@ -6,12 +6,12 @@
     "@material-ui/core": "^1.5.1",
     "@material-ui/icons": "^2.0.1",
     "ajv": "^6.5.3",
+    "axios": "^0.18.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.5",
-    "validator": "^10.8.0",
-    "axios": "^0.18.0"
+    "react-scripts": "^2.1.3",
+    "validator": "^10.8.0"
   },
   "proxy": "http://localhost:5002/",
   "scripts": {
@@ -19,5 +19,11 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
