--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bcrypt-nodejs": "0.0.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "html-to-pdf": "^0.1.11",
     "mongodb": "^3.1.12",
     "mongoose": "^5.4.5",
     "mysql": "^2.16.0",
