--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "mongodb": "^3.1.12",
     "mongoose": "^5.4.5",
     "mysql": "^2.16.0",
-    "nodemailer": "^5.1.1",
-    "phantom": "^6.0.3"
+    "nodemailer": "^5.1.1"
   }
 }
