--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "html-to-pdf": "^0.1.11",
+    "log4js": "^3.0.6",
     "mongodb": "^3.1.12",
     "mongoose": "^5.4.5",
     "mysql": "^2.16.0",
