--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.16.4",
     "html-pdf": "^2.2.0",
     "mongoose": "^5.4.5",
-    "nodemailer": "^5.1.1"
+    "nodemailer": "^5.1.1",
+    "qr-image": "^3.2.0"
   }
 }
